# esp32s3-dualusb-fw-clean

./: .gitattributes  .gitignore  00_START_HERE_MICHAEL_READY.txt  ADD_MICHAEL_AS_COLLABORATOR.md  BUILD_DOCUMENTATION_SUMMARY.md  BUILD_SUCCESS_LOG.md  CI_CD_IMPLEMENTATION_REPORT.md  CI_CD_PROCESS_FOR_ALL_PROJECTS.md  CI_CD_SYSTEM_FIXED.md  CMakeLists.txt  COMPLETE_SOLUTION_SUMMARY.md  COMPONENT_DEPENDENCY_FIX.md  CONTRACT_MILESTONE_TRACKER.md  COPY_PASTE_UPWORK_MESSAGE.txt  DELIVERY_COMPLETE.md  DELIVERY_PACKAGE.md  Dockerfile  ESP_TINYUSB_INSTALLATION_GUIDE.md  ESP_TINYUSB_SOLUTION_SUMMARY.md  EXECUTIVE_SUMMARY_PERMANENT_FIX.md  FINAL_BUILD_REPORT.md  FINAL_CHECKLIST.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FINAL_UPWORK_MESSAGE_FOR_MICHAEL.txt  HANDOFF_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  MESSAGE_FOR_MICHAEL_BUILD_FIXES.txt  MICHAEL_BUILD_FIX_FINAL.txt  MICHAEL_BUILD_FIX_SUMMARY.md  MICHAEL_PROJECT_COMPLETE_CHECKLIST.txt  MICHAEL_SECURITY_AUDIT_COMPLETE.md  MILESTONE_1_SUMMARY.md  MONITORING_PROTOCOL.md  PARTITION_TABLE_FIX.md  PERMANENT_FIX_ACTION_PLAN.md  PRE_DELIVERY_CHECKLIST.md  PROJECT_STATUS_DASHBOARD.md  QUICK_FIX_FOR_ESP_TINYUSB.txt  QUICK_START.md  (+24 more)
boards/: board.json
config/: build_matrix.json  feature_flags.json  pinmaps.json
docs/: test-notes.md  wiring.md
esp32s3-dualusb-fw/: .gitignore  AUTHOR  AUTHOR.md  BUILD_GUIDE.md  BUILD_LOG_EXAMPLE.md  CI_CD_AUTOMATED_PROCESS.md  CI_CD_SETUP.md  CI_CD_TEST.txt  CMakeLists.txt  COMPILATION_TOOLS.md  DOCUMENTATION.md  (+22 more)
test/: CMakeLists.txt
test/unit/: test_main.c  test_usb_host.c  test_usb_mode.c
(+34 files in other folders)
